JBR-5928: write regression test docs